Fix block link spacing
When hovering across blocks we show a little gray line that indicates the hover state. If items are too close together the bars touch (active/focused). This commit fixes this issue by making the block-link slightly less tall instead of adding a margin between list items.

--- a/addon/components/canvas-block-list/item.css
+++ b/addon/components/canvas-block-list/item.css
@@ -3,7 +3,7 @@
 .canvas-block-list-item {
   composes: canvas-block from 'canvas-editor/components/canvas-block/styles';
   list-style: none;
-  margin: 0 0 0.0625em;
+  margin: 0;
   position: relative;
 }
 
