--- a/addon/components/canvas-block/styles.css
+++ b/addon/components/canvas-block/styles.css
@@ -5,18 +5,23 @@
   margin: 0 0 1.5rem;
 }
 
+.block-spacing:last-child {
+  margin-bottom: 0;
+}
+
 .canvas-block {
   composes: block-spacing;
+  background: rgba(255, 0, 0, 0.05);
   position: relative;
 }
 
 .block-link {
+  bottom: 0.0625rem;
   display: block;
-  height: 100%;
   left: -1rem;
   opacity: 0;
   position: absolute;
-  top: 0;
+  top: 0.0625rem;
   width: 1rem;
 }
 
